# GKR

./: .gitignore  ArithmeticCircuit.cpp  ArithmeticCircuit.h  CMakeLists.txt  main.cpp
